[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
description = "An efficient way to spawn futures in WASM"
documentation = "https://docs.rs/spawn64"
license = "MIT"
name = "spawn64"
repository = "https://github.com/Bajix/spawn64"
readme = "./README.md"
version = "0.2.2-beta.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
const-array-init = "1.0"
js-sys = "0.3"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
futures-channel = "0.3"

[build]
target = "wasm32-unknown-unknown"

[features]
default = []

# Enable unstable `strict_provenance` language feature. See tracking issue: https://github.com/rust-lang/rust/issues/95228
strict_provenance = []
